Solved navbar not sticky problem and z-index of header in clubstyle.css

--- a/css/clubstyle.css
+++ b/css/clubstyle.css
@@ -19,6 +19,12 @@ body {
     background-size: cover;
     /*overflow: hidden;*/
 }
+
+header {
+  z-index: 2 !important;
+  margin-bottom: 3rem;
+}
+
 .heading {
     color: white;
 }
